# GRender

./: 3DApp.h  CMakeLists.txt  CanvaApp.h  main.cpp
Device/: GDevice.h
Render/: CMakeLists.txt  GApp.h  GCanvas.cpp  GCanvas.h  GColor.h
Render/Camera/: BaseCamera.h  CMakeLists.txt  RoundCamera.cpp  RoundCamera.h
Render/Graph/: BaseGraph.h  CMakeLists.txt  Graph.h  Triangle.h
Render/Graph/ScreenGraph/: Circle.cpp  Circle.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h
Render/Object/: CMakeLists.txt  GRObject.cpp  GRObject.h
Render/Object/Texture/: Texture.cpp  Texture.h
Render/Pipeline/: Pipeline.cpp  Pipeline.h  TrivalPipeline.cpp  TrivalPipeline.h
Render/Platform/: CMakeLists.txt
Render/Platform/DX/: D3DApp.cpp  D3DApp.h  D3DUtil.cpp  D3DUtil.h
Render/Platform/Win/: WinApp.cpp  WinApp.h
Render/Shader/: BaseShader.h  TestShader.h
Util/: CMakeLists.txt
Util/Math/: Matrix.h  Vec.h
Util/Timer/: GTimer.h  WindowsTimer.cpp  WindowsTimer.h
